# resumake

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  demo-short.tape  demo.tape  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: demo-web.webm
resumake/: __init__.py  ats_cmd.py  bio.py  build.py  config.py  console.py  cover_letter.py  diff_cmd.py  docx_builder.py  export_cmd.py  html_builder.py  import_cmd.py  init_cmd.py  jsonresume.py  linkedin.py  live_server.py  llm.py  pdf.py  preview_cmd.py  schema.py  suggest_cmd.py  tailor.py  theme.py  themes_cmd.py  translate.py  utils.py  validate_cmd.py  web_cmd.py
resumake/templates/: cv.example.yaml
resumake/themes/: academic.yaml  classic.yaml  compact.yaml  minimal.yaml  modern.yaml  single-column.yaml
scripts/: record_web_demo.py
tests/: conftest.py  test_ats.py  test_bio.py  test_build.py  test_config.py  test_cover_letter.py  test_diff.py  test_export.py  test_html_builder.py  test_init.py  test_jsonresume.py  test_linkedin.py  test_live_server.py  test_llm.py  test_pdf.py  test_schema.py  test_suggest.py  test_theme.py  test_translate.py  test_utils.py  test_validate.py
web/: server.py
web/static/: app.js  index.html  style.css
